samples/_failures_safe/1761176980_60459b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_825f8548.c: In function ‘main’:
./samples/SAFE/__tmp_825f8548.c:180:22: error: expected ‘;’ at end of input
  180 |         dispense_item
      |                      ^
      |                      ;
./samples/SAFE/__tmp_825f8548.c:180:9: error: expected declaration or statement at end of input
  180 |         dispense_item
      |         ^~~~~~~~~~~~~
./samples/SAFE/__tmp_825f8548.c:180:9: error: expected declaration or statement at end of input
